# AI-Assistant

./: .env  .gitignore  Cargo.toml  database
src/: main.rs  modules.rs
src/modules/: web_client.rs
src/modules/database/: database.rs  types.rs
src/modules/env/: env.rs
src/modules/web_client/: client.rs  google_types.rs  http.rs  server.rs  types.rs
