[package]
name = "ai_assistant"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlite = "0.36.1"
dotenvy = "0.15.7"
reqwest = { version = "0.12.9", features = ["json", "blocking"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
httparse = "1.9.5"
sha2 = "0.10.8"
hex = "0.4.3"
base64 = "0.22.1"

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
